# xmgr-resurrection

./: .clang-format  .git-blame-ignore-revs  .gitignore  CHANGES  CMakeLists.txt  CONTRIBUTORS  COPYRIGHT  FindNETCDF.cmake  INSTALL  Make.conf  Makefile  README  README.md  cmath.h  config.h  config.h.in  config.status  configure
ac-tools/Automake/: Config.pm
acegr_np/: Makefile  acegr_np.c  acegr_np.h  acegrf_np.c  test_np.c  testf_np.f
arch/os2/: Make.conf.os2  README  config.h.os2  configos2.cmd  dlfcn.c  dlfcn.h  dlfcn.mak  dotest.cmd
arch/vms/: cephes.mms  config.h-axp  config.h-common  config.h-dpml  config.h-no_dpml  config.h-post  config.h-pre  config.h-vax  config.h-vms6  config.h-vms7  configure.com  descrip.mms  dotest.com  getpwnam.c  grconvert.mms  make.conf-axp  make.conf-common  make.conf-m1_1  make.conf-m1_2  make.conf-vax  make.dep_cephes  make.dep_src  motif1_1.opt  motif1_2.opt  readme  src.mms  vms_unix.c  vms_unix.h
arch/win32/: README  dlfcn.h
autom4te.cache/: output.0  requests  traces.0
auxiliary/: Makefile  README  fdf2fit  magic.xmgr
cephes/: CMakeLists.txt  Make.common  Make.dep  Makefile  acosh.c  airy.c  asinh.c  atanh.c  beta.c  cbrt.c  chbevl.c  chdtr.c  check_float.c  const.c  dawsn.c  ellie.c  ellik.c  ellpe.c  ellpk.c  expn.c  fac.c  fdtr.c  fresnl.c  gamma.c  gdtr.c  hyp2f1.c  hyperg.c  i0.c  i1.c  igam.c  igami.c  incbet.c  incbi.c  isfinite.c  iv.c  j0.c  j1.c  jn.c  jv.c  k0.c  (+24 more)
cmake/: CompilerWarnings.cmake  FindTIRPC.cmake
conf/: Make.conf.in  alpha-osf4  config.h.in  configure.in  generic  generic.gcc  hppa-hpux  ix86-cygwin32  ix86-linux  ix86-os2  ix86-sco  linux  m88k-dgux  mips-irix  mips-irix6.4  mips-ultrix  rs6000-aix3  rs6000-aix4  sparc-sunos4  sparc-sunos5  sparc-sunos5.gcc
doc/: CHANGES.html  FAQ.html  Makefile  acegr_np.html  commands.html  data.html  dblclick.html  dlmodule.html  edcrset.html  file.html  fonts.html  graphops.html  hotkeys.html  intro.html  main.html  nohelp.html  npipe.html  options.html  page.html  plot.html  points.html  regions.html  sets.html  test_np.c  testf_np.f  trans.html  usage.html  view.html  xmgr.html
examples/: Makefile  axes.par  bar.d  bar2.d  dotest  explain.par  logistic.d  logistic.fit  props.gr  regions.par  slideshow.d  terr.d  test.com  tpipe.d
grconvert/: CMakeLists.txt  Makefile  defaults.c  grconvert  grconvert.c  grconvert.h  readbin.c  util.c  writeasc.c
scripts/: makepatch
src/: CMakeLists.txt  Make.common  Make.dep  Makefile  XMgr.ad  alloca.c  as274c.c  as274c.h  bitmaps.h  checkon.c  chersh.c  compute.c  computils.c  compwin.c  comwin.c  defaults.c  defines.h  dlmodule.c  dlmodule.h  draw.c  draw.h  drawticks.c  drawwin.c  eblockwin.c  editpwin.c  events.c  externs.h  f2c.h  featext.c  files.c  fileswin.c  fit.c  fourier.c  framewin.c  globals.h  graphu1.c  graphu2.c  graphwin.c  helpwin.c  hersh.h  (+49 more)
