cmake_minimum_required(VERSION 2.8.9)
project("xmgr")

include(FindMotif)
include(FindX11)

if (NOT X11_FOUND)
  message(FATAL_ERROR "X11 not found")
endif()
if (NOT MOTIF_FOUND)
  message(FATAL_ERROR "Motif not found")
endif()
if (NOT X11_ICE_FOUND)
  message(FATAL_ERROR "X11 ICE not found")
endif()
if (NOT X11_Xmu_FOUND)
  message(FATAL_ERROR "X11 Xmu not found")
endif()
if (NOT X11_Xpm_FOUND)
  message(FATAL_ERROR "X11 Xpm not found")
endif()
if (NOT X11_Xt_FOUND)
  message(FATAL_ERROR "X11 Xt not found")
endif()

add_definitions(-DGR_HOME=\"${CMAKE_INSTALL_PREFIX}/xmgr\")
add_definitions(-DPRINT_CMD=\"lpr\")

add_subdirectory(cephes)
add_subdirectory(grconvert)
add_subdirectory(src)

file(GLOB files "${CMAKE_SOURCE_DIR}/doc/*.html")
install(FILES ${files} DESTINATION xmgr/doc)

