cmake_minimum_required(VERSION 2.8.9)
project("xmgr")

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE RelWithDebInfo
    CACHE STRING "Build type: None Debug Release RelWithDebInfo MinSizeRel." FORCE)
endif()

include(FindMotif)
include(FindX11)
include(CheckIncludeFiles)
include(CheckFunctionExists)

if (NOT X11_FOUND)
  message(FATAL_ERROR "X11 not found")
endif()
if (NOT MOTIF_FOUND)
  message(FATAL_ERROR "Motif not found")
endif()
if (NOT X11_ICE_FOUND)
  message(FATAL_ERROR "X11 ICE not found")
endif()
if (NOT X11_Xmu_FOUND)
  message(FATAL_ERROR "X11 Xmu not found")
endif()
if (NOT X11_Xpm_FOUND)
  message(FATAL_ERROR "X11 Xpm not found")
endif()
if (NOT X11_Xt_FOUND)
  message(FATAL_ERROR "X11 Xt not found")
endif()

check_include_files(unistd.h HAVE_UNISTD_H)
check_include_files(alloca.h HAVE_ALLOCA_H)
check_include_files(sys/wait.h HAVE_SYS_WAIT_H)
check_include_files(fcntl.h HAVE_FCNTL_H)
check_include_files(ieeefp.h HAVE_IEEEFP_H)
check_function_exists(drand48 HAVE_DRAND48)
check_function_exists(getcwd HAVE_GETCWD)
check_function_exists(gethostname HAVE_GETHOSTNAME)
check_function_exists(memcpy HAVE_MEMCPY)
check_function_exists(memmove HAVE_MEMMOVE)
check_function_exists(popen HAVE_POPEN)
check_function_exists(on_exit HAVE_ON_EXIT)
check_function_exists(strdup HAVE_STRDUP)
check_function_exists(strstr HAVE_STRSTR)
check_function_exists(strerror HAVE_STRERROR)
check_function_exists(vsnprintf HAVE_VSNPRINTF)
check_function_exists(dlopen HAVE_DLOPEN)
check_function_exists(hypot HAVE_HYPOT)
configure_file("config.h.in" "config.h")

add_definitions(-DGR_HOME=\"${CMAKE_INSTALL_PREFIX}/xmgr\")
add_definitions(-DPRINT_CMD=\"lpr\")

add_subdirectory(cephes)
add_subdirectory(grconvert)
add_subdirectory(src)

file(GLOB files "${CMAKE_SOURCE_DIR}/doc/*.html")
install(FILES ${files} DESTINATION xmgr/doc)

