include_directories(SYSTEM ${X11_INCLUDE_DIR})
include_directories(SYSTEM ${MOTIF_INCLUDE_DIR})
include_directories(SYSTEM ${X11_ICE_INCLUDE_DIR})
include_directories(SYSTEM ${X11_Xmu_INCLUDE_DIR})
include_directories(SYSTEM ${X11_Xpm_INCLUDE_DIR})
include_directories(SYSTEM ${X11_Xt_INCLUDE_DIR})

set(LINKLIBS ${LINKLIBS} ${MOTIF_LIBRARIES})
set(LINKLIBS ${LINKLIBS} ${X11_Xpm_LIB})
set(LINKLIBS ${LINKLIBS} ${X11_Xmu_LIB})
set(LINKLIBS ${LINKLIBS} ${X11_Xt_LIB})
set(LINKLIBS ${LINKLIBS} ${X11_LIBRARIES})

file(GLOB OBJS "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
add_executable(xmgr ${OBJS})
if (UNIX)
  target_link_libraries(xmgr m project_warnings)
endif()
target_link_libraries(xmgr ${LINKLIBS} cephes project_warnings)
install_targets(/xmgr/bin xmgr)
